Fix visibility of the dropdown

--- a/src/components/molecules/NavBar/playa.scss
+++ b/src/components/molecules/NavBar/playa.scss
@@ -28,6 +28,7 @@ $sand: #937c63;
   box-shadow: box-shadow--large(0.1);
   backdrop-filter: blur(5px);
   background-color: $black;
+  padding: 0 1rem;
 
   .navbar-container {
     display: flex;
